# bin-slapper

./: .gitignore  Cargo.toml  README.md
src/: error_pages.rs  hbs.rs  main.rs
src/context/: mod.rs
src/utils/: mod.rs
static/css/: style.css  style.css.map  style.scss
static/css/src/: bs-like.css  bs-like.css.map  bs-like.scss  fancy-links.css  fancy-links.css.map  fancy-links.scss  general.css.map  general.scss
static/css/src/include/: animation.scss
static/js/: main.js  main.js.map  main.tsbuildinfo  tsconfig.json
static/js/src/: main.ts
templates/: error.html.hbs  index.html.hbs
templates/partials/: footer.html.hbs
