[package]
name = "bin-slapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["handlebars"] }
handlebars = "5.0.0-beta.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
rocket-include-static-resources = "0.10"
chrono = "0.4.31"
lazy_static = { version = "1.4.0", features = [] }